fix(post-code): add overflow hidden to code textarea and adjust isViewMode property

--- a/src/app/components/post/post-code/post-code.scss
+++ b/src/app/components/post/post-code/post-code.scss
@@ -57,6 +57,8 @@
     scrollbar-width: thin;
     scrollbar-color: rgb(60, 60, 60) transparent;
 
+    overflow: hidden;
+
     & code {
       @include font-settings(16, 400);
       line-height: 1.5;
